--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
             cursor: pointer;
         }
 
+        .error-message {
+            color: red;
+            margin-top: 20px;
+        }
+
         footer {
             text-align: center;
             padding: 20px 0;
@@ -117,6 +122,9 @@
                 <h5 id="results-header">Results</h5>
                 <ul id="result_links" class="collection"></ul>
             </div>
+            <div class="row">
+                <p id="error-message" class="error-message" style="display: none;">An error occurred while converting the link. Please try again.</p>
+            </div>
         </div>
     </main>
     <footer>
@@ -162,6 +170,7 @@
                 convertButton: 'Convert',
                 resultsHeader: 'Results',
                 footerText: 'Created with ChatGPT 4o by',
+                errorMessage: 'An error occurred while converting the link. Please try again.'
             },
             de: {
                 brandLogo: 'Song.Link Converter',
@@ -169,6 +178,7 @@
                 convertButton: 'Konvertieren',
                 resultsHeader: 'Ergebnisse',
                 footerText: 'Erstellt mit ChatGPT 4o von',
+                errorMessage: 'Beim Konvertieren des Links ist ein Fehler aufgetreten. Bitte versuche es erneut.'
             }
         };
 
@@ -177,6 +187,7 @@
             document.getElementById('input-label').textContent = translations[lang].inputLabel;
             document.getElementById('convert_button').innerHTML = `${translations[lang].convertButton} <i class="material-icons right">send</i>`;
             document.getElementById('results-header').textContent = translations[lang].resultsHeader;
+            document.getElementById('error-message').textContent = translations[lang].errorMessage;
             document.querySelector('footer').innerHTML = `<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/ChatGPT-Logo.svg/512px-ChatGPT-Logo.svg.png" alt="ChatGPT Logo" class="footer-logo"> ${translations[lang].footerText} <a href="https://by0.link" target="_blank">EinfachRuwen</a>`;
         }
 
@@ -188,17 +199,22 @@
         $('#convert_button').on('click', function() {
             var link = $('#music_link').val();
             if (link) {
-                $.getJSON(`https://api.song.link/v1-alpha.1/links?url=${link}&userCountry=DE`, function(data) {
-                    var links = data.linksByPlatform;
-                    $('#result_links').empty();
-                    for (var platform in links) {
-                        var platformLink = links[platform].url;
-                        var displayName = platformNames[platform] || platform.charAt(0).toUpperCase() + platform.slice(1);
-                        var listItem = `<li class="collection-item"><div>${displayName}<a href="#!" class="secondary-content copy-link" data-link="${platformLink}"><i class="material-icons">content_copy</i></a></div></li>`;
-                        $('#result_links').append(listItem);
-                    }
-                    $('#results').show();
-                });
+                $.getJSON(`https://api.song.link/v1-alpha.1/links?url=${link}&userCountry=DE`)
+                    .done(function(data) {
+                        var links = data.linksByPlatform;
+                        $('#result_links').empty();
+                        for (var platform in links) {
+                            var platformLink = links[platform].url;
+                            var displayName = platformNames[platform] || platform.charAt(0).toUpperCase() + platform.slice(1);
+                            var listItem = `<li class="collection-item"><div>${displayName}<a href="#!" class="secondary-content copy-link" data-link="${platformLink}"><i class="material-icons">content_copy</i></a></div></li>`;
+                            $('#result_links').append(listItem);
+                        }
+                        $('#results').show();
+                        $('#error-message').hide();
+                    })
+                    .fail(function() {
+                        $('#error-message').show();
+                    });
             }
         });
 
