--- a/index.html
+++ b/index.html
@@ -200,11 +200,13 @@
             var link = $('#music_link').val();
             if (link) {
                 const apiUrl = `https://api.song.link/v1-alpha.1/links?url=${encodeURIComponent(link)}&userCountry=DE`;
+                console.log(`Requesting URL: ${apiUrl}`);  // Debugging Information
                 $.ajax({
                     url: apiUrl,
                     method: 'GET',
                     dataType: 'json',
                     success: function(data) {
+                        console.log('API Response:', data);  // Debugging Information
                         var links = data.linksByPlatform;
                         $('#result_links').empty();
                         for (var platform in links) {
@@ -218,9 +220,10 @@
                     },
                     error: function(jqxhr, textStatus, error) {
                         var err = textStatus + ", " + error + ", " + jqxhr.responseText;
+                        console.log(`Error Details: ${err}`);  // Debugging Information
                         $('#error-message').text(`Request Failed: ${err}`);
                         $('#error-message').show();
-                        alert(`Request Failed: ${${err}`);
+                        alert(`Request Failed: ${err}`);
                     }
                 });
             } else {
