--- a/index.html
+++ b/index.html
@@ -196,38 +196,39 @@
             setLanguage(userLang);
         });
 
-        $('#convert_button').on('click', function() {
-            var link = $('#music_link').val();
+        $('#convert_button').on('click', async function() {
+            const link = $('#music_link').val();
             if (link) {
                 const apiUrl = `https://api.song.link/v1-alpha.1/links?url=${encodeURIComponent(link)}&userCountry=DE`;
                 console.log(`Requesting URL: ${apiUrl}`);  // Debugging Information
-                $.ajax({
-                    url: apiUrl,
-                    method: 'GET',
-                    dataType: 'json',
-                    success: function(data, textStatus, jqXHR) {
-                        console.log('API Response:', data);  // Debugging Information
-                        console.log('Status:', textStatus);
-                        console.log('jqXHR:', jqXHR);
-                        var links = data.linksByPlatform;
-                        $('#result_links').empty();
-                        for (var platform in links) {
-                            var platformLink = links[platform].url;
-                            var displayName = platformNames[platform] || platform.charAt(0).toUpperCase() + platform.slice(1);
-                            var listItem = `<li class="collection-item"><div>${displayName}<a href="#!" class="secondary-content copy-link" data-link="${platformLink}"><i class="material-icons">content_copy</i></a></div></li>`;
-                            $('#result_links').append(listItem);
-                        }
-                        $('#results').show();
-                        $('#error-message').hide();
-                    },
-                    error: function(jqxhr, textStatus, error) {
-                        var err = `${textStatus}, ${error}, ${jqxhr.status} ${jqxhr.statusText}, ${jqxhr.responseText}`;
-                        console.log(`Error Details: ${err}`);  // Debugging Information
-                        $('#error-message').text(`Request Failed: ${err}`);
+                try {
+                    const response = await fetch(apiUrl, { method: 'GET' });
+                    if (!response.ok) {
+                        const errorDetails = `HTTP status ${response.status} (${response.statusText})`;
+                        console.error(`API Request failed: ${errorDetails}`);  // Debugging Information
+                        $('#error-message').text(`Request Failed: ${errorDetails}`);
                         $('#error-message').show();
-                        alert(`Request Failed: ${err}`);
+                        alert(`Request Failed: ${errorDetails}`);
+                        return;
                     }
-                });
+                    const data = await response.json();
+                    console.log('API Response:', data);  // Debugging Information
+                    const links = data.linksByPlatform;
+                    $('#result_links').empty();
+                    for (const platform in links) {
+                        const platformLink = links[platform].url;
+                        const displayName = platformNames[platform] || platform.charAt(0).toUpperCase() + platform.slice(1);
+                        const listItem = `<li class="collection-item"><div>${displayName}<a href="#!" class="secondary-content copy-link" data-link="${platformLink}"><i class="material-icons">content_copy</i></a></div></li>`;
+                        $('#result_links').append(listItem);
+                    }
+                    $('#results').show();
+                    $('#error-message').hide();
+                } catch (error) {
+                    console.error('Request failed:', error);  // Debugging Information
+                    $('#error-message').text(`Request Failed: ${error.message}`);
+                    $('#error-message').show();
+                    alert(`Request Failed: ${error.message}`);
+                }
             } else {
                 $('#error-message').text('Please enter a valid link.');
                 $('#error-message').show();
@@ -236,23 +237,23 @@
         });
 
         $(document).on('click', '.copy-link', function() {
-            var link = $(this).data('link');
+            const link = $(this).data('link');
             copyToClipboard(link);
         });
 
         function copyToClipboard(text) {
-            var tempInput = document.createElement("input");
-            tempInput.style.position = "absolute";
-            tempInput.style.left = "-9999px";
+            const tempInput = document.createElement('input');
+            tempInput.style.position = 'absolute';
+            tempInput.style.left = '-9999px';
             tempInput.value = text;
             document.body.appendChild(tempInput);
             tempInput.select();
             try {
-                document.execCommand("copy");
-                M.toast({html: 'Link in die Zwischenablage kopiert!'});
+                document.execCommand('copy');
+                M.toast({ html: 'Link in die Zwischenablage kopiert!' });
             } catch (err) {
-                console.error('Konnte den Link nicht kopieren: ', err);
-                M.toast({html: 'Fehler beim Kopieren des Links!'});
+                console.error('Konnte den Link nicht kopieren:', err);
+                M.toast({ html: 'Fehler beim Kopieren des Links!' });
                 alert(`Copy Failed: ${err}`);
             }
             document.body.removeChild(tempInput);
