--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
         $('#convert_button').on('click', async function() {
             const link = $('#music_link').val();
             if (link) {
-                const apiUrl = `https://api.song.link/v1-alpha.1/links?url=${encodeURIComponent(link)}&userCountry=DE`;
+                const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
+                const apiUrl = `${proxyUrl}https://api.song.link/v1-alpha.1/links?url=${encodeURIComponent(link)}&userCountry=DE`;
                 console.log(`Requesting URL: ${apiUrl}`);  // Debugging Information
                 try {
                     const response = await fetch(apiUrl, { method: 'GET' });
